@@ -11,3 +11,4 @@ job: 60
 jobchange: 60
 petrename: 50
 petfriendly: 50
+stats: 40
