@@ -2282,10 +2282,10 @@ int do_init(int argc, char *argv[]) {
         } 
         
 	battle_config_read(BATTLE_CONF_FILENAME);
+	msg_config_read(MSG_CONF_NAME);
 	atcommand_config_read(ATCOMMAND_CONF_FILENAME);
 	charcommand_config_read(CHARCOMMAND_CONF_FILENAME);
 	script_config_read(SCRIPT_CONF_NAME);
-	msg_config_read(MSG_CONF_NAME);
 #ifndef TXT_ONLY
 	sql_config_read(SQL_CONF_NAME);
 	log_config_read(LOG_CONF_NAME);
